--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "",
   "dependencies": {
+    "basscss": "^7.0.4",
     "react": "^0.13.3",
     "react-router": "^0.13.3"
   },
