--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "basscss": "^7.0.4",
     "react": "^0.13.3",
-    "react-colorpicker": "^0.3.14",
+    "react-color-picker": "^2.1.9",
     "react-router": "^0.13.3",
     "react-zeroclipboard": "^1.1.0"
   },
