--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "basscss": "^7.0.4",
     "react": "^0.13.3",
     "react-color-picker": "^2.1.9",
-    "react-router": "^0.13.3",
-    "react-zeroclipboard": "^1.1.0"
+    "react-copy-to-clipboard": "^3.0.4",
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.8.25",
