--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "webpack-dev-server --progress --colors",
     "open": "open http://localhost:8080/webpack-dev-server/",
     "build": "webpack",
-    "zip": "mkdir temp temp/css && cp index.html bundle.js temp/ && cp css/* temp/css/ && zip -r bundle.zip temp && rm -rf temp"
+    "zip": "mkdir resources resources/css && cp index.html bundle.js resources/ && cp css/* resources/css/ && zip -r bundle.zip resources && rm -rf resources"
   },
   "author": "",
   "dependencies": {
